--- a/project2/scss/style.scss
+++ b/project2/scss/style.scss
@@ -30,7 +30,7 @@ a, button {
  	@include FontSettings (700);
  	text-decoration: none;
  	}
-p, span {
+p, span, label {
  	@include FontSettings (600);
  	text-decoration: none;
  	}
@@ -40,8 +40,6 @@ button {
 	border-radius: 7px;
 	color: $fontColor;
 	padding: 5px 100px;
-	position: absolute;
-	z-index: 900;
 	box-shadow: 3px 3px 7px 0px $fontColor;
  }
  img {
@@ -60,43 +58,30 @@ button {
 		box-shadow: none;
 	}
 }
-.shad {
-	height: 650px;
-	width: 100%;
-	background-color: #32272D;
-	opacity: .5;
-	position: absolute;
-	z-index: 2;
-}
 
 .bg {
-	position: absolute;
-	z-index: 1;
-	height: 650px;
+	margin: -60px 0 60px 0;
+	height: 700px;
 	width: 100%;
-	background: url("../img/portrait-of-a-young-worker-in-a-hard-hat-at-a-large-metalworking-plant.jpg") bottom center no-repeat;
+	background: url("../img/bg10.jpg") top center no-repeat;
 	background-size: cover;
-}
-.aboutus {
-	border: 2px solid red;
-	margin: 40px 0px;
+	.aboutus {
+	margin: 60px 0px;
 	height: 600px;
 	width: 100%;
 	h1{
-	position: absolute;
-	z-index: 3;
+	text-align: left;
 	color: #EEEEEE;
 	text-shadow: 0 0 5px #32272D;
 	}
-	button {
-		margin-top: 400px;
-	}
 }
+}
+
 .metall {
-	margin-bottom: 40px;
+	margin-bottom: 60px;
 }
 .metall-works {
-	margin-top: 40px;
+	margin-top: 60px;
 	.works {
 		margin-top: -60px;
 		padding-left: 75px;
@@ -104,5 +89,52 @@ button {
 	p {
 		text-align: left;
 		line-height: 27px;
+	}
+}
+.bg2 {
+margin-top: 80px;
+width: 100%;
+height: 700px;
+background: url("../img/bg20.jpg") bottom center no-repeat;
+background-size: cover;
+}
+
+.contacts {
+	margin-top: 60px;
+	width: 100%;
+	h1{
+	margin-top: 60px;
+	text-align: center;
+	color: #EEEEEE;
+	text-shadow: 0 0 5px #32272D;
+	}
+	p {
+	text-align: left;
+	color: #EEEEEE;
+	text-shadow: 0 0 5px #32272D;
+	}
+}
+.main-form {
+	background-color: $green;
+	padding:40px 50px;
+	text-align: left;
+	box-shadow: 3px 3px 7px 0px $fontColor;
+	border-radius: 10px;
+	.main-form-input2 {
+	height: 100px;
+	}
+	input{
+	margin: 20px 0;
+	display: block;
+	border: 1px solid $fontColor;
+	width:100%;
+	padding: 10px;
+	box-shadow: 3px 3px 7px 0px $fontColor;
+	}
+	button{
+	background-color: $fontColor;
+	color: #EEEEEE;
+	padding: 5px 22px;
+	box-shadow: 3px 3px 7px 0px $fontColor;
 	}
 }
