--- a/project2/css/style.css
+++ b/project2/css/style.css
@@ -17,7 +17,7 @@ a, button {
   text-decoration: none;
 }
 
-p, span {
+p, span, label {
   font-family: "Montserrat", sans-serif;
   font-size: 30px;
   color: #32272D;
@@ -33,8 +33,6 @@ button {
   border-radius: 7px;
   color: #32272D;
   padding: 5px 100px;
-  position: absolute;
-  z-index: 900;
   -webkit-box-shadow: 3px 3px 7px 0px #32272D;
           box-shadow: 3px 3px 7px 0px #32272D;
 }
@@ -57,46 +55,30 @@ img {
           box-shadow: none;
 }
 
-.shad {
-  height: 650px;
-  width: 100%;
-  background-color: #32272D;
-  opacity: 0.5;
-  position: absolute;
-  z-index: 2;
-}
-
 .bg {
-  position: absolute;
-  z-index: 1;
-  height: 650px;
+  margin: -60px 0 60px 0;
+  height: 700px;
   width: 100%;
-  background: url("../img/portrait-of-a-young-worker-in-a-hard-hat-at-a-large-metalworking-plant.jpg") bottom center no-repeat;
+  background: url("../img/bg10.jpg") top center no-repeat;
   background-size: cover;
 }
-
-.aboutus {
-  border: 2px solid red;
-  margin: 40px 0px;
+.bg .aboutus {
+  margin: 60px 0px;
   height: 600px;
   width: 100%;
 }
-.aboutus h1 {
-  position: absolute;
-  z-index: 3;
+.bg .aboutus h1 {
+  text-align: left;
   color: #EEEEEE;
   text-shadow: 0 0 5px #32272D;
 }
-.aboutus button {
-  margin-top: 400px;
-}
 
 .metall {
-  margin-bottom: 40px;
+  margin-bottom: 60px;
 }
 
 .metall-works {
-  margin-top: 40px;
+  margin-top: 60px;
 }
 .metall-works .works {
   margin-top: -60px;
@@ -105,4 +87,56 @@ img {
 .metall-works p {
   text-align: left;
   line-height: 27px;
+}
+
+.bg2 {
+  margin-top: 80px;
+  width: 100%;
+  height: 700px;
+  background: url("../img/bg20.jpg") bottom center no-repeat;
+  background-size: cover;
+}
+
+.contacts {
+  margin-top: 60px;
+  width: 100%;
+}
+.contacts h1 {
+  margin-top: 60px;
+  text-align: center;
+  color: #EEEEEE;
+  text-shadow: 0 0 5px #32272D;
+}
+.contacts p {
+  text-align: left;
+  color: #EEEEEE;
+  text-shadow: 0 0 5px #32272D;
+}
+
+.main-form {
+  background-color: #C5DE65;
+  padding: 40px 50px;
+  text-align: left;
+  -webkit-box-shadow: 3px 3px 7px 0px #32272D;
+          box-shadow: 3px 3px 7px 0px #32272D;
+  border-radius: 10px;
+}
+.main-form .main-form-input2 {
+  height: 100px;
+}
+.main-form input {
+  margin: 20px 0;
+  display: block;
+  border: 1px solid #32272D;
+  width: 100%;
+  padding: 10px;
+  -webkit-box-shadow: 3px 3px 7px 0px #32272D;
+          box-shadow: 3px 3px 7px 0px #32272D;
+}
+.main-form button {
+  background-color: #32272D;
+  color: #EEEEEE;
+  padding: 5px 22px;
+  -webkit-box-shadow: 3px 3px 7px 0px #32272D;
+          box-shadow: 3px 3px 7px 0px #32272D;
 }
