--- a/project2/css/style.css
+++ b/project2/css/style.css
@@ -140,3 +140,9 @@ img {
   -webkit-box-shadow: 3px 3px 7px 0px #32272D;
           box-shadow: 3px 3px 7px 0px #32272D;
 }
+
+@media (min-width: 1919px) {
+  .bg, .bg2 {
+    height: 1080px;
+  }
+}
