--- a/project2/scss/style.scss
+++ b/project2/scss/style.scss
@@ -141,6 +141,18 @@ background-size: cover;
 
 @media (min-width: 1919px) {
 	.bg, .bg2 {
-	height: 1080px;
+	height: 1000px;
 	}
+	.aboutus {
+	height: 1000px;
+	}
+	.contacts2 {
+		height: 845px;
+	}
+	.container {
+	--bs-gutter-x: 1rem;
+	--bs-gutter-y: 0;
+	padding-right: calc(var(--bs-gutter-x) * 0.1);
+	padding-left: calc(var(--bs-gutter-x) * 0.1);
+}
 }
