--- a/project2/css/style.css
+++ b/project2/css/style.css
@@ -7,7 +7,7 @@ h1 {
   text-align: center;
 }
 
-a, button {
+a {
   font-family: "Montserrat", sans-serif;
   font-size: 30px;
   color: #32272D;
@@ -28,6 +28,12 @@ p, span, label {
 }
 
 button {
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+  color: #32272D;
+  font-weight: 600;
+  text-align: center;
+  font-weight: 600;
   background-color: #C5DE65;
   border: none;
   border-radius: 7px;
@@ -64,7 +70,7 @@ img {
 }
 .bg .aboutus {
   margin: 60px 0px;
-  height: 600px;
+  height: 700px;
   width: 100%;
 }
 .bg .aboutus h1 {
@@ -102,6 +108,7 @@ img {
   width: 100%;
 }
 .contacts h1 {
+  line-height: 0.5;
   margin-top: 60px;
   text-align: center;
   color: #EEEEEE;
@@ -134,9 +141,15 @@ img {
           box-shadow: 3px 3px 7px 0px #32272D;
 }
 .main-form button {
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+  color: #32272D;
+  font-weight: 600;
+  text-align: center;
+  font-weight: 600;
   background-color: #32272D;
   color: #EEEEEE;
-  padding: 5px 22px;
+  padding: 5px 21px;
   -webkit-box-shadow: 3px 3px 7px 0px #32272D;
           box-shadow: 3px 3px 7px 0px #32272D;
 }
