--- a/project2/scss/style.scss
+++ b/project2/scss/style.scss
@@ -26,7 +26,7 @@ $Montserrat:'Montserrat', sans-serif;
 h1 {
 	@include HeaderFontSettings;
 	}
-a, button {
+a {
  	@include FontSettings (700);
  	text-decoration: none;
  	}
@@ -35,6 +35,7 @@ p, span, label {
  	text-decoration: none;
  	}
 button {
+	@include FontSettings (600);
 	background-color: $green;
 	border: none;
 	border-radius: 7px;
@@ -67,7 +68,7 @@ button {
 	background-size: cover;
 	.aboutus {
 	margin: 60px 0px;
-	height: 600px;
+	height: 700px;
 	width: 100%;
 	h1{
 	text-align: left;
@@ -103,6 +104,7 @@ background-size: cover;
 	margin-top: 60px;
 	width: 100%;
 	h1{
+	line-height: 0.5;
 	margin-top: 60px;
 	text-align: center;
 	color: #EEEEEE;
@@ -132,9 +134,10 @@ background-size: cover;
 	box-shadow: 3px 3px 7px 0px $fontColor;
 	}
 	button{
+	@include FontSettings (600);
 	background-color: $fontColor;
 	color: #EEEEEE;
-	padding: 5px 22px;
+	padding: 5px 21px;
 	box-shadow: 3px 3px 7px 0px $fontColor;
 	}
 }
