--- a/project2/css/style.css
+++ b/project2/css/style.css
@@ -70,10 +70,10 @@ img {
 }
 .bg .aboutus {
   margin: 60px 0px;
-  height: 700px;
   width: 100%;
 }
 .bg .aboutus h1 {
+  margin-top: 300px;
   text-align: left;
   color: #EEEEEE;
   text-shadow: 0 0 5px #32272D;
@@ -154,7 +154,7 @@ img {
           box-shadow: 3px 3px 7px 0px #32272D;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 1600px) {
   .aboutus2 {
     height: 1000px;
   }
