--- a/project2/scss/style.scss
+++ b/project2/scss/style.scss
@@ -98,12 +98,8 @@ width: 100%;
 height: 700px;
 background: url("../img/bg20.jpg") bottom center no-repeat;
 background-size: cover;
-}
-
-.contacts {
-	margin-top: 60px;
-	width: 100%;
 	h1{
+	margin-top: 60px;
 	line-height: 0.5;
 	margin-top: 60px;
 	text-align: center;
@@ -143,15 +139,24 @@ background-size: cover;
 }
 
 @media (min-width: 1600px) {
-	.aboutus2 {
+	.bg {
+	.aboutus {
+	margin: 60px 0;
 	height: 1000px;
+	width: 100%;
+		h1{
+	margin-top: 0;
+		}
 	}
+}
 	.bg, .bg2 {
 	height: 1000px;
 	}
-	.contacts2 {
-	height: 845px;
-	}
+
+	.contacts {
+	margin-top: 0px;
+	height: 910px;
+}
 	.container {
 	--bs-gutter-x: 1rem;
 	--bs-gutter-y: 0;
