--- a/project2/css/style.css
+++ b/project2/css/style.css
@@ -103,7 +103,7 @@ img {
   background-size: cover;
 }
 .bg2 h1 {
-  margin-top: 60px;
+  margin: 60px 0 60px 0;
   line-height: 0.5;
   margin-top: 60px;
   text-align: center;
@@ -162,8 +162,10 @@ img {
   .bg, .bg2 {
     height: 1000px;
   }
+  .bg2 h1 {
+    margin: 60px 0 0 0;
+  }
   .contacts {
-    margin-top: 0px;
     height: 910px;
   }
   .container {
