--- a/project2/scss/style.scss
+++ b/project2/scss/style.scss
@@ -139,7 +139,8 @@ background: url("../img/bg20.jpg") bottom center no-repeat;
 	text-align: center;
 	background-color: $fontColor;
 	color: #EEEEEE;
-	padding: 5px;
+	padding: 10px;
+	line-height: 30px;
 	}
 }
 
