--- a/project2/scss/style.scss
+++ b/project2/scss/style.scss
@@ -1,6 +1,7 @@
 // Переменные
 $green: #C5DE65;
 $fontColor: #32272D ; //коричневый
+$white: #EEE;
 $Montserrat:'Montserrat', sans-serif;
 
 // Миксины
@@ -17,7 +18,7 @@ $Montserrat:'Montserrat', sans-serif;
 	font-size: 30px;
 	color: $fontColor;
 	text-align: left;
-	font-weight: 600;
+	font-weight: 500;
 	line-height: 40px;
 }
 
@@ -32,6 +33,13 @@ a:hover, a:active {
 h1 {
 	@include HeaderFontSettings;
 	}
+h2{ text-transform: none;
+	font-family: $Montserrat;
+	font-size: 35px;
+	color: $fontColor;
+	font-weight: 700;
+	text-align: center;
+}
 a, p, span, li {
 	@include FontSettings;
  	text-decoration: none;
@@ -81,11 +89,14 @@ button {
 	text-align: left;
 	}
 	p, li, h1{
-	color: #EEEEEE;
+	color: $white;
 	text-shadow: 0 0 5px #32272D;
 	}
 	}
 }
+// .col-lg-3, .col-lg-2, .col-lg-5 {
+// 	border: 2px solid red;
+// }
 
 // Металл
 .block {
@@ -93,10 +104,85 @@ button {
 	img{
 		width: 350px;
 	}
-}
-.block-works {
+	.mytable {
+		p{text-align: center;}
+	}
+	.block-works {
 	margin-top: 60px;
+	}
+	.img1, .img2 {
+		&:hover{
+		transform: scale(1.05);
+		transition: 0.4s;
+	}
+	}
+	.img1{
+		width: 380px;
+	}
+	.img2{
+		width: 313px;
+		margin-left: 75px;
+		margin-bottom: 20px;
+	}
 }
+// Всплывающая галлерея
+.popup {
+	text-align: center;
+	display: none;
+	height: 100%;
+	width: 100%;
+	position: fixed;
+	left: 50%;
+	top: 0;
+	transform: translateX(-50%);
+	z-index: 102;
+	background-color: rgba(0, 0, 0, 0.9);
+	.popup-close {
+	&:hover {
+		cursor: pointer;
+	};
+	position: absolute;
+	top: 1rem;
+	right: 1rem;
+	z-index: 200;
+	width: 4rem;
+	color: $green;
+	font-size: 26px;
+	}
+}
+.gallery-slider {
+	padding-top: 20px;
+	img {
+		display: block;
+		margin: 0 auto;
+		height: 700px;
+		width: auto;
+		box-shadow: none;
+	}
+}
+
+.prev, .next{
+	box-shadow: none;
+	position: absolute;
+	z-index: 500;
+	width: 2rem;
+	height: 4rem;
+	top: 50%;
+	transform: translateY(-50%);
+	}
+.prev {
+background: url("../img/prev.svg") center no-repeat;
+background-size: 20%;
+left: -5%;
+}
+.next{
+background: url("../img/next.svg") center no-repeat;
+background-size: 20%;
+right: -5%;
+transform: translateY(-50%);
+}
+
+// Остались вопросы?
 .bg2 {
 margin-top: 80px;
 background: url("../img/bg20.jpg") bottom center no-repeat;
@@ -104,12 +190,10 @@ background: url("../img/bg20.jpg") bottom center no-repeat;
 	margin: 60px 0 60px 0;
 	}
 	p, h1 {
-	color: #EEEEEE;
+	color: $white;
 	text-shadow: 0 0 5px #32272D;
 	}
 }
-
-// Остались вопросы?
 .form {
 	width: 100%px;
 	height: 100%px;
@@ -134,7 +218,7 @@ background: url("../img/bg20.jpg") bottom center no-repeat;
 	font-weight: 600;
 	text-align: center;
 	background-color: $fontColor;
-	color: #EEEEEE;
+	color: $white;
 	padding: 10px;
 	line-height: 30px;
 	}
