--- a/клуб четырех коней/css/media.css
+++ b/клуб четырех коней/css/media.css
@@ -1,9 +1,9 @@
-@media screen and (max-width: 1366px) {
+@media (max-width: 1366px) {
   .container {
     padding: 0 clamp(1.25rem, 0.02rem + 5.25vw, 4.5rem);
   }
 }
-@media screen and (max-width: 450px) {
+@media (max-width: 450px) {
   h1, h2 {
     font-size: 36px;
   }
