--- a/клуб четырех коней/css/style.scss
+++ b/клуб четырех коней/css/style.scss
@@ -178,7 +178,7 @@ button {
   }
   .eighth {
     grid-area: eighth;
-    margin: 30px 0 0 17px;
+    margin: 60px 0 0 17px;
   }
   .ninth {
     grid-area: ninth;
@@ -209,6 +209,7 @@ button {
   padding: 16px 0;
   border-bottom: 2px solid rgb(208, 208, 208);
   border-right: 2px solid rgb(208, 208, 208);
+  line-height: 1;
 
 }
 .td-2,  .td-4,  .td-6,  .td-8,  .td-10  {
@@ -259,7 +260,7 @@ button {
 // Этапы преображения
 .stages {
   position: relative;
-  margin-top: 163px;
+  margin-top: 190px;
   header {
     display: flex;
     flex-wrap: wrap;
@@ -329,7 +330,7 @@ button {
 
 // Участники турнира
 .participants {
-  margin-block: 200px 135px;
+  margin-block: 200px 140px;
   .header {
     display: flex;
     justify-content: space-between;
