--- a/клуб четырех коней/css/style.scss
+++ b/клуб четырех коней/css/style.scss
@@ -1,12 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;500&family=Merriweather:wght@400;700&display=swap');
 //Общие настройки
-
-.maket {
-  position: absolute;
-  z-index: 1000;
-  opacity: 0.6;
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -179,10 +172,11 @@ button {
   .third {grid-area: third;}
   .fourth {grid-area: fourth;}
   .fifth {grid-area: fifth;}
-  .sixth {grid-area: sixth;}
+  .sixth {grid-area: sixth;
+  margin-left: -27px;}
   .seventh {
     grid-area: seventh;
-    padding: 64px 0 0 17px;
+    padding: 64px 20px 0 17px;
   }
   .eighth {
     grid-area: eighth;
@@ -358,17 +352,15 @@ button {
   font-weight: 400;
 }
 .wrapper {
-  max-width: 1222px;
   width: 100%;
   position: relative;
   margin-top: 60px;
-  
 }
 .carousel {
   display: grid;
-  column-gap: 20px;
+  column-gap: 5%;
   grid-auto-flow: column;
-  grid-auto-columns: 394px;
+  grid-auto-columns: 30%;
   overflow-x: auto;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
@@ -414,10 +406,6 @@ button {
 .carousel.no-transition {
   scroll-behavior: auto;
 }
-
-
-
-
 
 // Подвал
 footer {
