--- a/клуб четырех коней/css/media.scss
+++ b/клуб четырех коней/css/media.scss
@@ -41,7 +41,7 @@
   }
   @keyframes ticker {
     from {
-      transform: translateX(85%);
+      transform: translateX(90%);
     }
     to {
       transform: translateX(-100%);
@@ -49,10 +49,225 @@
   }
 }
 
-@media (max-width: 1366px) {
+@media (max-width: 1365px) {
     .container {
-      padding-inline: 72px;
+      padding-inline: 40px;
       }
+      @keyframes ticker {
+        from {
+          transform: translateX(40%);
+        }
+        to {
+          transform: translateX(-100%);
+        }
+      }
+      h1 {
+        font-size: 40px;
+      }
+      h2 {
+        font-size: 36px;
+      }
+      span, pre {
+        font-size: 28px;
+      }
+      h3 {
+        font-size: 20px;
+      }
+      button {
+        width: 36px;
+        height: 36px;
+      }
+
+    // Турнир
+    .support {
+      margin-top: 60px;
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-areas:
+      "first first first first fifth fifth"
+      "second second second second fifth fifth"
+      "third third third third fifth fifth"
+      "fourth fourth fourth fourth fifth fifth"
+      "sixth sixth sixth seventh seventh seventh"
+      "sixth sixth sixth eighth eighth eighth"
+      "ninth ninth ninth eighth eighth eighth";
+      .fifth {
+        width: 330px;
+      }
+      .sixth {
+      width: 400px;
+    }
+      .eighth {
+        margin: 20px 0 0 17px;
+      }
+      .ninth {
+        margin: 20px 0 0 0;
+        font-size: 18px;
+      }
+    }
+
+    .table {
+      font-size: 16px;
+    }
+    .td-1,  .td-3,  .td-5,  .td-7,  .td-9, .td-2,  .td-4,  .td-6,  .td-8,  .td-10  {
+      padding-block: 10;
+    }
+    
+    // Этапы преображения
+    .stages {
+      justify-content: flex-start;
+      margin-top: 80px;
+      header {
+        display: block;
+        a {
+          font-size: 18px;
+        }
+      }
+      .plane {
+        position: absolute;
+        left: 60%;
+        top: -30px;
+        width: 300px;
+      }
+    }
+
+    // Участники турнира
+    .participants {
+      margin-block: 80px;
+    }
+
+    .wrapper {
+    margin-top: 40px;
+    .carousel {
+      .card {
+        padding-inline: 24px;
+        img {
+            height: 244px;
+        }
+      }
+      }
+    }
+    .mobile-buttons {
+      margin-top: 40px;
+    }
+}
+
+@media (max-width: 950px) {
+  .container {
+    padding-inline: 40px;
+    }
+    @keyframes ticker {
+      from {
+        transform: translateX(40%);
+      }
+      to {
+        transform: translateX(-100%);
+      }
+    }
+    h1 {
+      font-size: 40px;
+    }
+    h2 {
+      font-size: 36px;
+    }
+    span, pre {
+      font-size: 28px;
+    }
+    h3 {
+      font-size: 20px;
+    }
+    button {
+      width: 36px;
+      height: 36px;
+    }
+
+  // Участники турнира
+  .wrapper {
+  .carousel {
+    column-gap: 5%;
+    grid-auto-columns: 45%;
+    }
+  }
+  // Этапы преображения
+.stages {
+  margin-top: 80px;
+  header {
+    a {
+    font-size: 18px;
+    margin-top: 12px;
+    width: 100%;
+      }
+  }
+  .plane {
+    position: absolute;
+    left: 55%;
+    top: -10px;
+  }
+}
+.stages-btn {
+    display: flex;
+    justify-content: center;
+    margin-top: 28px;
+  }
+.stages-pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 6px;
+    padding-inline: 16px;
+}
+.circle {
+    width: 10px;
+    height: 10px;
+    display: inline-block;
+    background: rgb(217, 217, 217);
+    border-radius: 50%;
+}
+.active {
+    background: rgb(49, 49, 49);
+}
+.stages-slider {
+    width: 100%;
+    margin-top: 80px;
+    grid-template-columns: repeat(5, 100%);
+    grid-template-areas: 
+    "one three four six seven"
+    "one three five six seven"
+    "two three five six seven"
+    "two three five six seven";
+    gap: 0;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+    .stage {
+        scroll-snap-align: start;
+    }
+    p {
+    font-size: 18px;
+    }
+}
+.stages-slider::-webkit-scrollbar {
+    display: none;
+  }
+.stages-slider.no-transition {
+    scroll-behavior: auto;
+  }
+.one, .three, .four, .six, .seven {
+  display: flex;
+  align-items: flex-start;
+  padding: 62px 20px 0; 
+  background: url(../img/bggrid.png);
+}
+.three, .six, .seven {
+  height: 300px;
+}
+.two {
+  padding-top: 11px;
+}
+.five {
+  padding-block: 23px 0;
+}
 }
 
 
@@ -156,9 +371,6 @@
     .ninth {
       margin: 40px 0 0;
     }
-    a {
-      font-size: 18px;
-    }
   }
 
   .table {
@@ -199,97 +411,19 @@
     padding-top: 0;
   }
 
-
-
-
 // Этапы преображения
 .stages {
-  margin-top: 120px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  header {
-    a {
-    font-size: 18px;
-    margin-top: 12px;
-    width: 100%;
-      }
-  }
   .plane {
     margin-left: auto;
     margin-right: auto;
     left: 0;
     right: 0;
     text-align: center;
-    top: 190px;
-    width: 335px;
+    top: 150px;
+    width: 290px;
   }
 }
-.stages-btn {
-    display: flex;
-    justify-content: center;
-    margin-top: 28px;
-  }
-.stages-pagination {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    column-gap: 6px;
-    padding-inline: 16px;
-}
-.circle {
-    width: 10px;
-    height: 10px;
-    display: inline-block;
-    background: rgb(217, 217, 217);
-    border-radius: 50%;
-}
-.active {
-    background: rgb(49, 49, 49);
-}
-.stages-slider {
-    width: 335px;
-    margin-top: 148px;
-    display: grid;
-    grid-template-columns: repeat(5, 335px);
-    grid-template-areas: 
-    "one three four six seven"
-    "one three five six seven"
-    "two three five six seven"
-    "two three five six seven";
-    gap: 0;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-    scrollbar-width: none;
-    .stage {
-        scroll-snap-align: start;
-    }
-    p {
-    font-size: 18px;
-    }
-}
-.stages-slider::-webkit-scrollbar {
-    display: none;
-  }
-.stages-slider.no-transition {
-    scroll-behavior: auto;
-  }
-.one, .three, .four, .six, .seven {
-  display: flex;
-  align-items: flex-start;
-  padding: 62px 20px 0; 
-  background: url(../img/bggrid.png);
-}
-.three, .six, .seven {
-  height: 300px;
-}
-.two {
-  padding-top: 11px;
-}
-.five {
-  padding-block: 23px 0;
-}
+
 
 // Участники турнира
 .participants {
@@ -312,9 +446,5 @@
     }
     }
   }
-
-.mobile-buttons {
-    margin-top: 40px;
-}
 
   }
