--- a/Aveji/css/style.css
+++ b/Aveji/css/style.css
@@ -10,7 +10,7 @@ body {
   background-color: #F4F6F5;
   font-family: "Roboto", sans-serif;
   color: #212529;
-  padding: 16px 32px;
+  padding: 16px clamp(2rem, -43rem + 50vw, 17rem);
 }
 
 section, footer {
