--- a/aveji/scss/mobileStyle.scss
+++ b/aveji/scss/mobileStyle.scss
@@ -140,7 +140,7 @@
         align-items: center;
         justify-items: center;
             h4 {
-            max-width: 100%;
+            width: 100%;
             }
     }
 
@@ -187,4 +187,5 @@
     }  
     
 }
+
 
