--- a/aveji/scss/mobileStyle.scss
+++ b/aveji/scss/mobileStyle.scss
@@ -30,17 +30,12 @@
 		position: fixed;
 		top: 0;
 		right: -100%;
-		width: 35vw;
-		height: 400px;
 		transition: right 0.5s;
 		z-index: 1000;
 		gap: 15px;
         align-items: flex-end;
-		padding: 100px 35px 20px 0;
+		padding: 100px 35px 30px;
         background-color: #E8EBEB;
-        a {
-            font-size: 32px;
-        }
 	}
     .header__menu-link--active {
         display: block;
@@ -174,17 +169,17 @@
     }
     .form__application-input {
         width: 100%;
-        height: 80px;
-        font-size: 44px;
+        // height: 60px;
+        // font-size: 44px;
     }
-    .form__application-button {
-        padding: 44px 60px;
-        font-size: 44px;
-    }
+    // .form__application-button {
+    //     padding: 44px 60px;
+    //     font-size: 44px;
+    // }
     .form__link {
         img {
-            height: 80px;
-            width: auto;
+            height: auto;
+            width: 40;
         }
     }
 
